--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,21 @@
       href="https://fonts.googleapis.com/css2?family=Karla:wght@300;400;600;700;800&display=swap"
       rel="stylesheet"
     />
-    <title>React App</title>
+    <title>AbhirajMaid</title>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-GEDV3CMTTD"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-GEDV3CMTTD");
+    </script>
   </head>
   <body>
     <div id="root"></div>
