--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,10 @@
       href="https://fonts.googleapis.com/css2?family=Karla:wght@300;400;600;700;800&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://api.fontshare.com/css?f[]=panchang@500,600,700&display=swap"
+      rel="stylesheet"
+    />
     <title>Abhiraj Maid</title>
   </head>
   <body>
