--- a/public/index.html
+++ b/public/index.html
@@ -2,15 +2,22 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <!-- favicon -->
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+
+    <!-- meta-tags -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Hello guys, I'm Abhiraj Maid and this is my Portfolio"
     />
+
+    <!-- manifest -->
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
+    <!-- fonts: Work-Sans and Panchang -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
