Update index.html to Add favicon, manifest.json

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <!-- favicon -->
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="./favicon.ico" />
 
     <!-- meta-tags -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -14,8 +14,8 @@
     />
 
     <!-- manifest -->
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="apple-touch-icon" href="./Icons/apple-icon-144x144.png" />
+    <link rel="manifest" href="/manifest.json" />
 
     <!-- fonts: Work-Sans and Panchang -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -28,7 +28,7 @@
       href="https://api.fontshare.com/css?f[]=panchang@500,600,700&display=swap"
       rel="stylesheet"
     />
-    <title>Abhiraj Maid</title>
+    <title>Abhiraj Maid 😎</title>
   </head>
   <body>
     <div id="root"></div>
